[package]
name = "auth"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }
jwt-simple = { version = "0.12", default-features = false, features = ["pure-rust"] }
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["serde", "v4"] }
